--- a/style.css
+++ b/style.css
@@ -2,35 +2,56 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #f0f0f0;
+  background-color: #ffffff;
   text-align: center;
   background-image: url('surpresaFoto.jpg');
   background-repeat: repeat;
   background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 .container {
   max-width: 800px;
   margin: 50px auto;
   padding: 20px;
-  background-color: rgba(255, 255, 255, 0.8); /* Light blue background color with opacity */
+  background-color: rgba(227, 22, 33, 0.8); /* Light blue background color with opacity */
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   text-align: left;
 }
 
 h1 {
-  color: #333;
+  color: #fffafa;
+  text-align: center;
 }
 
 .question {
-  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.question-text {
+  margin-bottom: 10px;
+}
+
+.answer-submit {
+  display: flex;
+  align-items: center;
+}
+
+.answer-submit input[type="text"] {
+  margin-right: 10px; /* Espaçamento entre a caixa de resposta e o botão */
 }
 
 button {
   padding: 10px 20px;
-  background-color: #007bff;
-  color: #fff;
+  background-color: #00b3ff;
+  color: #ffffff;
   border: none;
   border-radius: 20px;
   cursor: pointer;
@@ -63,14 +84,13 @@ a {
   text-decoration: none;
 }
 
-a:hover {
-  text-decoration: underline;
+p {
+  color: #fffafa;
+  text-align: center;
 }
 
-/* Heart styles */
-.heart {
-  color: #ff66a3; /* Pink color for hearts */
-  font-size: 24px;
+a:hover {
+  text-decoration: underline;
 }
 
 /* Heart styles */
